# monorepo

./: .bazelrc  README.md  WORKSPACE.bazel
examples/hello-world/go/: BUILD.bazel
examples/hello-world/python/: BUILD.bazel
examples/hello-world/rust/: BUILD.bazel
